Fix z-index menu

--- a/app/styles/components/_menu-top.scss
+++ b/app/styles/components/_menu-top.scss
@@ -25,6 +25,7 @@
     text-align: center;
     line-height: 60px;
     overflow: auto;
+    z-index: 99999;
 
     .title {
       border-bottom: 1px solid #ffffff;
